--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header a:hover{
 }
 #showcase{
     min-height: 400px;
-    background: url(/back2.jpg) no-repeat;
+    background: url(back2.jpg) no-repeat;
     text-align: center;
     color: white;
 }
